--- a/contact.html
+++ b/contact.html
@@ -42,3 +42,5 @@ form: true
     <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
   </div>
 </form>
+
+<p>Or if you prefer you can email me directly at <a href="mailto:reece@jackhighbowls.com">reece@jackhighbowls.com</a></p>
