--- a/terms.html
+++ b/terms.html
@@ -1,9 +1,71 @@
 ---
 layout: page
 title: Terms And Conditions
-description: Have questions? I have answers.
+description: The small print.
 background: '/img/bg-contact.jpg'
 form: true
 ---
 
-<p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+<!-- wp:paragraph -->
+<p>Last updated: Feb 5th, 2025</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph -->
+<p>Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using the www.jackhighbowls.com/ website (the "Service") operated by Jack High Bowls ("us", "we", or "our").</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph -->
+<p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph -->
+<p>By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service. The Terms and Conditions agreement for Jack High Bowls has been created with the help of <a href="https://termsfeed.com/terms-conditions/generator/">TermsFeed Terms and Conditions Generator</a>.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:heading -->
+<h2>Links To Other Web Sites</h2>
+<!-- /wp:heading -->
+
+<!-- wp:paragraph -->
+<p>Our Service may contain links to third-party web sites or services that are not owned or controlled by Jack High Bowls.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph -->
+<p>Jack High Bowls has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that Jack High Bowls shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph -->
+<p>We strongly advise you to read the terms and conditions and privacy policies of any third-party web sites or services that you visit.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:heading -->
+<h2>Governing Law</h2>
+<!-- /wp:heading -->
+
+<!-- wp:paragraph -->
+<p>These Terms shall be governed and construed in accordance with the laws of United Kingdom, without regard to its conflict of law provisions.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph -->
+<p>Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:heading -->
+<h2>Changes</h2>
+<!-- /wp:heading -->
+
+<!-- wp:paragraph -->
+<p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph -->
+<p>By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, please stop using the Service.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:heading -->
+<h2>Contact Us</h2>
+<!-- /wp:heading -->
+
+<!-- wp:paragraph -->
+<p>If you have any questions about these Terms, please contact us.</p>
+<!-- /wp:paragraph -->
