--- a/about-us.html
+++ b/about-us.html
@@ -4,18 +4,19 @@ title: About Me
 description: This is what I do.
 ---
 <!-- wp:columns -->
-<div class="wp-block-columns"><!-- wp:column {"width":"66.66%"} -->
-<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:paragraph -->
+<div class="row"><!-- wp:column {"width":"66.66%"} -->
+<div class="col-sm-8"><!-- wp:paragraph -->
 <p>Hi! My name is Reece and I created Jack High Bowls to provide a useful resource for bowls related product reviews and buying guides.</p>
 <!-- /wp:paragraph -->
 
 <!-- wp:paragraph -->
 <p>Choosing the right equipment you need to play is a daunting experience, especially for new bowlers. No one wants to feel conned, or like they are making a huge mistake and wasting their money. This is what I aim to help with. Helpful, fluff-free reviews that explains the key pain-points and features in a simple to understand and friendly manner.</p>
-<!-- /wp:paragraph --></div>
+<!-- /wp:paragraph -->
+</div>
 <!-- /wp:column -->
 
 <!-- wp:column {"width":"33.33%"} -->
-<div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:image {"id":1593,"sizeSlug":"large","linkDestination":"none","className":"is-style-rounded"} -->
+<div class="col-sm-4"><!-- wp:image {"id":1593,"sizeSlug":"large","linkDestination":"none","className":"is-style-rounded"} -->
 <img src="/img/reece-williams-jack-high-bowls.jpg" />
 <!-- /wp:image --></div>
 <!-- /wp:column --></div>
