--- a/about-us.html
+++ b/about-us.html
@@ -17,7 +17,7 @@ description: This is what I do.
 
 <!-- wp:column {"width":"33.33%"} -->
 <div class="col-sm-4"><!-- wp:image {"id":1593,"sizeSlug":"large","linkDestination":"none","className":"is-style-rounded"} -->
-<img src="/img/reece-williams-jack-high-bowls.jpg" />
+<img src="{{ '/img/reece-williams-jack-high-bowls.jpg' | prepend: site.baseurl | replace: '//', '/' }}" style="width: 100%;" />
 <!-- /wp:image --></div>
 <!-- /wp:column --></div>
 <!-- /wp:columns -->
