--- a/lawn-bowls-downloadable-drill-pack.html
+++ b/lawn-bowls-downloadable-drill-pack.html
@@ -11,7 +11,7 @@ description: The small print.
 <!-- /wp:image -->
 
 <!-- wp:group {"style":{"color":{"background":"#eeecdf"}},"layout":{"type":"flex","orientation":"vertical"}} -->
-<div class="wp-block-group has-background" style="background-color:#eeecdf"><!-- wp:paragraph -->
+<div class="px-2 py-1 wp-block-group has-background" style="background-color:#eeecdf"><!-- wp:paragraph -->
 <p>This pack contains 20 drills to help you improve your game.</p>
 <!-- /wp:paragraph -->
 
